feat(82) kill me NOW!!! fucking ass + new table
