# api/src/main/java/com/example/computershop/model/entity/DonView.java
@@ -1,0 +1,19 @@
+package com.example.computershop.model.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+
+public interface DonView {
+//    @ManyToOne
+//    @JoinColumn(name = "email", referencedColumnName = "email", nullable = false)
+//    private UsersEntity usersEmail;
+//    @ManyToOne
+//    @JoinColumn(name = "model", referencedColumnName = "model", nullable = false)
+//    private ProductEntity product;
+//    @Column
+//    private Long code;
+//    @ManyToOne
+//    @JoinColumn(name = "user_id", referencedColumnName = "id", nullable = false)
+//    private UsersEntity user;
+}
